[package]
name = "bluebus"
version = "0.2.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbus = "0.6.0"
nix = "0.18.0"
signal-hook = "0.1.16" # dev only